shift module done..
